# ai2sql

./: .gitignore  README.md  main.py  pyproject.toml  test.py
action/: __init__.py  base.py  table_column.py  table_info.py
ai2sql/chat_model/: __init__.py  base.py  openai.py
ai2sql/core/: __init__.py  config.py  logger.py  skill.py
ai2sql/react/: __init__.py  ai2sql_prompt.py  base.py
ai2sql/schemas/message/: __init__.py  base.py
ai2sql/schemas/role/: __init__.py
ai2sql/schemas/template/: __init__.py  base.py
ai2sql/tools/: __init__.py  base.py  db_metadata.py
bot/: __init__.py  base.py  gptbot.py
config/: config.example.yaml
doc/: agentgpt.md  idea.md  playground_20240417.md  sqlgpt.md
prompt/: pre_prompt.py  prompt_message.py
schemas/message/: __init__.py  base.py
schemas/role/: __init__.py  chatrole.py
schemas/template/: __init__.py  base.py
skills/AI2Sql/: config.yaml  prompt.txt
skills/AI2Sql_20230417/: config.yaml
utils/: __init__.py  config.py
